--- a/vacantes.css
+++ b/vacantes.css
@@ -48,9 +48,8 @@ main{
 }
 
 .info{
-	
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
     width: 90%;
     margin: 0 auto;
 }
@@ -96,8 +95,11 @@ main{
 }
 
 button{
-    width: 100px;
-    height: 30px;
+	align-self: center;
+	width: 160px;
+	height:30px;
+	margin: 20px 10px 10px 10px ;
+	padding: 5px;
     border-radius: 4px;
     border: none;
     box-shadow: 0px 3px 4px rgba(48, 44, 44, 0.582);
