--- a/formulario.css
+++ b/formulario.css
@@ -72,6 +72,7 @@ main{
     flex-direction: column;
     font-size: 1.5rem;
     margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .form-box{
@@ -130,14 +131,13 @@ main{
     margin-top: 10px;
     margin-bottom: 10px;
     background-color: var(--soft-blue);
- 
     border: none;
     border-radius: 4px;
     text-align: center;
 
 }
 
-button{
+.button{
 	width: auto;
 	height:30px;
 	margin: 20px 10px 10px 10px ;
@@ -146,20 +146,16 @@ button{
 	border: none;
 	border-radius: 4px;
 	box-shadow: 0px 3px 4px rgba(48, 44, 44, 0.582);
-}
-
-button a{
-
 	font-size: 1.4rem;
 	font-weight: 500;
 	color: var(--off-white);
 	text-decoration:none ;
+	cursor: pointer;
 }
 
-button:hover{
-	cursor: pointer;
-	background-color: var(--warm-black);
-	
+
+.button:hover{
+	background-color: var(--warm-black);	
 }
 
 footer{		
@@ -194,12 +190,28 @@ footer{
 }
 
 .contact{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 20px;
 	
-	display:flex;
-	margin-top:20px;	
+}
+.contact p, a{
+	justify-self: center;
+	font-size: 1.3rem;
+	color: var(--just-white);
+	text-decoration:none;
+	
 }
 
-.contact img{
+.contact-social{
+	display:inline-block ;
+	margin-left: 10px;
+	margin-right: 10px;
+	
+}
+
+.contact-social img{
 	
 	background-position: center;
 	background-repeat: no-repeat;
@@ -208,28 +220,4 @@ footer{
 	height: 18px;	
 	vertical-align: bottom;
 	margin-right:4px;
-}
-
-.contact-right{
-	display:flex ;
-	width: 50%;
-	align-items:center ;
-	justify-content: center;
-	
-}
-
-.contact-left{
-	display:flex ;
-	width: 50%;
-	align-items:center ;
-	justify-content: center;
-}
-
-
-
-.contact p{
-	justify-self: center;
-	font-size: 1.3rem;
-	color: var(--just-white);
-	
 }
